# vierkant

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  assimp
.github/workflows/: cmake.yml  cmake_build.yml  cmake_build_windows.yml
cmake_modules/: add_test_helper.cmake  build_shaders.cmake  build_slang_shaders.cmake  vierkant_utils.cmake
include/vierkant/: Application.hpp  Arcball.hpp  AssetProvider.hpp  Bloom.hpp  Bones.hpp  Buffer.hpp  Camera.hpp  CameraControl.hpp  CommandBuffer.hpp  Compute.hpp  DepthOfField.h  DepthOfField.hpp  Device.hpp  DrawContext.hpp  Font.hpp  ForwardSceneRenderer.hpp  Framebuffer.hpp  GBuffer.hpp  GaussianBlur.hpp  Geometry.hpp  Image.hpp  ImageEffect.hpp  Input.hpp  Instance.hpp  Material.hpp  Mesh.hpp  MeshNode.hpp  NoiseGenerator.hpp  Object3D.hpp  PBRDeferred.hpp  PBRPathTracer.hpp  Pipeline.hpp  PipelineCache.hpp  Rasterizer.hpp  RayBuilder.hpp  RayTracer.hpp  Raytracer.hpp  Renderer.hpp  Scene.hpp  SceneRenderer.hpp  (+56 more)
include/vierkant/bundled/: volk.h
include/vierkant/imgui/: ImGuizmo.h  imconfig.h  imgui_integration.h  imgui_internal.h  (+2 more)
sample/: CMakeLists.txt  simple_test.cpp  simple_test.hpp
samples/: CMakeLists.txt
samples/empty_sample/: empty_sample.cpp  empty_sample.hpp
scripts/: dispersion_constants.py
shaders/: brdf.glsl  brdf_lut.frag  convolve_ggx.frag  convolve_lambert.frag  cube.vert  cube_layers.geom  default.frag  default.vert  fullscreen_bloom_composition.frag  fullscreen_bloom_thresh.frag  fullscreen_dof.frag  fullscreen_fxaa.frag  fullscreen_gaussian_blur.frag  fullscreen_pbr_post.frag  fullscreen_texture.frag  fullscreen_texture.vert  pbr.vert  pbr_convolve_lambert.frag  pbr_g_buffer.frag  pbr_g_buffer_albedo.frag  pbr_g_buffer_albedo_normal.frag  pbr_g_buffer_albedo_normal_rough.frag  pbr_g_buffer_albedo_rough.frag  pbr_g_buffer_complete.frag  pbr_lighting_environment.frag  pbr_skin.vert  pbr_tangent.vert  pbr_tangent_skin.vert  types.glsl  unlit_color.frag  unlit_color.vert  unlit_cube.frag  unlit_cube.vert  unlit_panorama.frag  unlit_skin.vert  unlit_texture.frag  unlit_texture.vert
shaders/cube/: cube.vert  cube_layers.geom
shaders/fullscreen/: ao_rayquery.frag  ao_screenspace.frag  bloom_composition.frag  bloom_thresh.frag  dof.frag  grid.frag  taa.frag  texture.frag  texture.vert  texture_depth.frag
shaders/pbr/: convolve_ggx.frag  convolve_lambert.frag  cull_meshlets.task  default.vert  depth_min_reduce.comp  g_buffer.frag  g_buffer.mesh  g_buffer.vert  g_buffer_albedo.frag  g_buffer_albedo_normal.frag  g_buffer_albedo_normal_rough.frag  g_buffer_albedo_rough.frag  g_buffer_complete.frag  g_buffer_skin.vert  g_buffer_tangent.vert  g_buffer_tangent_morph.vert  g_buffer_tangent_skin.vert  g_buffer_tangent_tess.vert  g_buffer_uber.frag  g_buffer_vertex_data.glsl  indirect_cull.comp  lighting_environment.frag  mesh_morph.comp  mesh_skin.comp  object_overlay.comp  passthrough.tesc  passthrough.tese  skin.vert  tangent.vert  tangent_skin.vert  tess_pn_triangle.tesc  tess_pn_triangle.tese
shaders/ray/: DisneyBSDF.glsl  anyhit.rahit  bsdf_UE4.glsl  bsdf_disney.glsl  closesthit.rchit  denoise.comp  direct_lighting.glsl  micromap.comp  miss.rmiss  miss_environment.rmiss  pixel_buffer.glsl  ray_common.glsl  raygen.rgen  shadow.rmiss  types.glsl  visibility_test.glsl
shaders/renderer/: brdf.glsl  bsdf_common.glsl  importance_sampling.glsl  lights_punctual.glsl  mesh_task_payload.glsl  object_overlay.comp  packed_vertex.glsl  point_light.glsl  punctual_light.glsl  transform.glsl  types.glsl
shaders/slang/: color.slang  denoise.slang  fs_texture.slang  mesh_compute.slang  mesh_morph.slang  mesh_skin.slang  micromap.slang  object_overlay.slang  raygen.slang  raypipeline.slang  renderer.slang  texture.slang  unlit.slang  utils.slang
shaders/unlit/: color.frag  color.vert  cube.frag  cube.vert  environment_white.frag  panorama.frag  skin.vert  texture.frag  texture.vert  unlit.frag  unlit.vert
shaders/utils/: barycentric_indexing.glsl  bsdf.glsl  camera.glsl  color_cast.glsl  color_unorm.glsl  color_ycc.glsl  constants.glsl  dof.glsl  fxaa.glsl  gaussian_blur.glsl  hash.glsl  octahedral_map.glsl  packed_vertex.glsl  phase_function.glsl  poisson_blur.glsl  procedural_environment.glsl  project_sphere.glsl  random.glsl  sampling.glsl  sdf.glsl  simplex.glsl  slerp.glsl  taa.glsl  tonemap.glsl  transform.glsl
src/: Application.cpp  Arcball.cpp  AssetProvider.cpp  Bloom.cpp  Bones.cpp  Buffer.cpp  CMakeLists.txt  Camera.cpp  CameraControl.cpp  CommandBuffer.cpp  Compute.cpp  Device.cpp  Device.hpp  DrawContext.cpp  Font.cpp  Font.hpp  ForwardSceneRenderer.cpp  Framebuffer.cpp  Framebuffer.hpp  GBuffer.cpp  GaussianBlur.cpp  Geometry.cpp  Image.cpp  Image.hpp  Input.cpp  Instance.cpp  Instance.hpp  Material.cpp  Mesh.cpp  Mesh.hpp  MeshNode.cpp  NoiseGenerator.cpp  Object3D.cpp  PBRDeferred.cpp  PBRPathTracer.cpp  Pipeline.cpp  Pipeline.hpp  Rasterizer.cpp  RayBuilder.cpp  RayTracer.cpp  (+46 more)
src/bc7enc/: bc7enc.c
src/imgui/: ImGuizmo.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_integration.cpp  imgui_tables.cpp  imgui_util.cpp  imgui_widgets.cpp  implot.cpp  implot_demo.cpp  implot_items.cpp  imstb_truetype.h
src/model/: gltf.cpp  model_loading.cpp  wavefront_obj.cpp
src/sample/: CMakeLists.txt  simple_test.cpp  simple_test.hpp
src/tests/: TestBuffer.cpp  TestCommandBuffer.cpp  TestCompressionBC7.cpp  TestDevice.cpp  TestFramebuffer.cpp  TestImage.cpp  TestMesh.cpp  TestPipeline.cpp  TestSemaphore.cpp  TestSwapChain.cpp  TestWindow.cpp  test_context.hpp
tests/: CMakeLists.txt  TestAABB.cpp  TestAssetProvider.cpp  TestBarycentricCurve.cpp  TestBarycentricIndexing.cpp  TestBuffer.cpp  TestCommandBuffer.cpp  TestCompressionBC7.cpp  TestDevice.cpp  TestFramebuffer.cpp  TestImage.cpp  TestLinearHashmap.cpp  TestMesh.cpp  TestNoiseGenerator.cpp  TestObject3D.cpp  TestPBRDeferred.cpp  TestPhysicsContext.cpp  TestPipeline.cpp  TestRasterizer.cpp  TestRenderer.cpp  TestSemaphore.cpp  TestSpirvReflect.cpp  TestSwapChain.cpp  TestTransform.cpp  TestWindow.cpp  test_context.hpp
(+122 files in other folders)
